--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -587,10 +587,11 @@
             </intent-filter>
         </activity>
 
-        <!-- bluetooth phone service -->
-        <service android:name="BluetoothPhoneService">
+        <!-- Engle, for bluez bluetooth -->
+        <!-- bluetooth headset service -->
+        <service android:name="BluetoothHeadsetService">
             <intent-filter>
-                <action android:name="android.bluetooth.IBluetoothHeadsetPhone" />
+                <action android:name="android.bluetooth.IBluetoothHeadset" />
             </intent-filter>
         </service>
 
